# manga_reader

./: .gitignore  ITERATION_3_COMPLETION.md  README.md  pyproject.toml  run.sh  test_basic.py
src/manga_reader/: __init__.py  main.py
src/manga_reader/coordinators/: __init__.py  context_panel_coordinator.py  context_sync_coordinator.py  dictionary_panel_coordinator.py  library_coordinator.py  reader_controller.py  sentence_analysis_coordinator.py  view_modes.py  word_interaction_coordinator.py
src/manga_reader/core/: __init__.py  library_volume.py  manga_page.py  manga_volume.py  ocr_block.py  vocabulary_entities.py
src/manga_reader/io/: __init__.py  database_manager.py  library_repository.py  volume_ingestor.py
src/manga_reader/services/: __init__.py  api_workers.py  dictionary_service.py  explanation_service.py  file_translation_cache.py  gemini_explanation_service.py  (+7 more)
testVol2/: testVol2.mokuro
tests/: __init__.py
tests/coordinators/: test_context_panel_coordinator.py  test_context_sync_coordinator.py  test_library_coordinator.py  test_reader_controller.py  test_sentence_analysis_coordinator.py  test_word_interaction_coordinator.py
tests/integration/: test_library_full_workflow.py  test_verb_tracking_workflow.py
tests/io/: __init__.py  test_database_manager.py  test_library_repository.py  test_volume_ingestor.py
tests/services/: test_dictionary_service.py  test_morphology_service.py  test_settings_manager.py  test_text_normalization.py  test_thumbnail_service.py  test_translation_cache.py  test_vocabulary_service.py
tests/ui/: test_library_screen.py  test_manga_canvas.py  test_manga_canvas_data.py  test_manga_canvas_fit_scaling.py  test_manga_canvas_noun_data.py  test_page_transition_scaling.py
(+38 files in other folders)
